--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 <p>I enjoy sunshine and cozy places.</p>
 
+<p>Here is my <a href="https://github.com/figalit/figalit.github.io/blob/master/figali-taho-cv.pdf" target="_blank">CV</a>, in case you are interested.</p>
+
 <p>Check out my 
-<a href="https://github.com/figalit" target="_blank">GitHub</a>. 
+<a href="https://github.com/figalit" target="_blank">GitHub</a> too. 
 
 <p>The best ways to contact me are <a href="https://twitter.com/figalitaho" target="_blank">Twitter</a> and <a href="mailto:figalitaho@gmail.com" target="_blank">email</a>.</p>
